--- a/Localizer/Localizer.csproj
+++ b/Localizer/Localizer.csproj
@@ -7,6 +7,8 @@
     <Company>https://ascenkeeprov.github.io</Company>
     <Description>Cities Skylines Localization Mod</Description>
     <PackageIcon>csl.png</PackageIcon>
+    <RepositoryUrl>https://github.com/AscenKeeprov/Cities-Skylines/tree/master/Localizer</RepositoryUrl>
+    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -35,5 +37,9 @@
       <PackagePath></PackagePath>
     </None>
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="mkdir &quot;%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(SolutionName)&quot;&#xD;&#xA;del &quot;%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(SolutionName)\$(TargetFileName)&quot;&#xD;&#xA;xcopy /y &quot;$(TargetPath)&quot; &quot;%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(SolutionName)&quot;" />
+  </Target>
 
 </Project>
