--- a/Localizer/Localizer.csproj
+++ b/Localizer/Localizer.csproj
@@ -96,11 +96,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Operation.cs" />
-    <Compile Include="Forms\Form_LocaleSelect.cs">
+    <Compile Include="Forms\Form_Translate.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Form_LocaleSelect.Designer.cs">
-      <DependentUpon>Form_LocaleSelect.cs</DependentUpon>
+    <Compile Include="Forms\Form_Translate.Designer.cs">
+      <DependentUpon>Form_Translate.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Form_Setup.cs">
       <SubType>Form</SubType>
@@ -113,8 +113,8 @@
     <Compile Include="App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Logger.cs" />
-    <EmbeddedResource Include="Forms\Form_LocaleSelect.resx">
-      <DependentUpon>Form_LocaleSelect.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Form_Translate.resx">
+      <DependentUpon>Form_Translate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form_Setup.resx">
       <DependentUpon>Form_Setup.cs</DependentUpon>
