--- a/Localizer/Localizer.csproj
+++ b/Localizer/Localizer.csproj
@@ -54,6 +54,9 @@
     <StartupObject>Localizer.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ColossalManaged">
+      <HintPath>Libraries\ColossalManaged.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -95,7 +98,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Operation.cs" />
+    <Compile Include="Core\Constants.cs" />
+    <Compile Include="Core\Mode.cs" />
     <Compile Include="Forms\Form_Translate.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,7 +116,8 @@
     <Compile Include="Core\LocalizerContext.cs" />
     <Compile Include="App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Logger.cs" />
+    <Compile Include="Utilities\Logger.cs" />
+    <Compile Include="Utilities\ObjectManager.cs" />
     <EmbeddedResource Include="Forms\Form_Translate.resx">
       <DependentUpon>Form_Translate.cs</DependentUpon>
     </EmbeddedResource>
@@ -145,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.ico" />
+    <Content Include="Libraries\ColossalManaged.dll" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.8">
